--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-query": "^5.8.2",
+    "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.4.5",
     "lodash": "^4.17.21",
     "lucide-react": "^0.292.0",
     "next": "14.0.1",
