--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-query": "^5.8.2",
+    "@tiptap/pm": "^2.2.4",
+    "@tiptap/react": "^2.2.4",
+    "@tiptap/starter-kit": "^2.2.4",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -30,8 +33,11 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.292.0",
     "next": "14.0.1",
+    "quill-upload": "^0.0.9",
     "react": "^18",
     "react-dom": "^18",
+    "react-html-parser": "^2.0.2",
+    "react-quill": "^2.0.0",
     "sonner": "^1.4.0",
     "stripe": "^14.4.0",
     "tailwind-merge": "^2.2.1",
