--- a/package.json
+++ b/package.json
@@ -35,18 +35,22 @@
     "date-fns": "^2.30.0",
     "dotenv": "^16.4.5",
     "filepond": "^4.30.6",
+    "firebase": "^10.11.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.292.0",
     "multer": "^1.4.5-lts.1",
     "next": "14.0.1",
+    "next-cloudinary": "^6.4.1",
     "pdf2json": "^3.0.5",
     "quill-upload": "^0.0.9",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-filepond": "^7.1.2",
     "react-quill": "^2.0.0",
     "sonner": "^1.4.0",
     "stripe": "^14.4.0",
+    "svix": "^1.21.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "unsplash-js": "^7.0.18",
